feat: Authorize pharmacist